--- a/styles.css
+++ b/styles.css
@@ -85,7 +85,7 @@ section {
     /* Ajuste o tamanho conforme necessário */
 }
 
-#tropicalia .container {
+#Lobão e os Ronaldos .container {
     display: flex;
     align-items: center;
     justify-content: center;
