--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ h2 {
 }
 
 .fundo-galeria {
-    background: url('img/Disco.jpg') bottom right no-repeat;
+    background: url('img/Guerra.jpeg') bottom right no-repeat;
     background-size: 180px 180px;
 }
 
