--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ section {
 
 .inicio-fundo {
     /* aula 3 */
-    background-image: url('img/Disco.jpg');
+    background-image: url('img/Guerra.jpeg');
     /* Substitua pelo caminho da sua imagem */
     background-size: cover;
     background-position: right;
