--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ h2 {
 }
 
 #contato {
-    background-image: url('img/Disco.jpg');
+    background-image: url('img/imagem lobão.jpeg');
     background-size: cover;
     padding: 4rem 0;
     /* Espaçamento interno para a seção de contato */
@@ -188,7 +188,7 @@ h2 {
     color: var(--alto-contraste-fundo)
 }
 
-.alto-contraste #tropicalia {
+.alto-contraste #Lobão e os Ronaldos {
     background: none;
 }
 
