--- a/styles.css
+++ b/styles.css
@@ -108,12 +108,12 @@ h2 {
 }
 
 .fundo-galeria {
-    background: url('img/Guerra.jpeg') bottom right no-repeat;
+    background: url('img/imagem lobão.jpeg') bottom right no-repeat;
     background-size: 180px 180px;
 }
 
 #contato {
-    background-image: url('img/imagem lobão.jpeg');
+    background-image: url('img/Disco.jpg');
     background-size: cover;
     padding: 4rem 0;
     /* Espaçamento interno para a seção de contato */
